--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="stylesheet/less", type="text/css", href="/stylesheets/all.less")
+
   body
     block content
+  script(src="/javascripts/less.min.js")
