--- a/views/index.jade
+++ b/views/index.jade
@@ -2,24 +2,27 @@ extends layout
 
 block content
   .row
-    h1= title
-    p
-      b adiutor, adiutoris
-      |  (m) - helper, assistant; deputy
+    .col-xs-12
+      h1= title
+      p
+        b adiutor, adiutoris
+        |  (m) - helper, assistant; deputy
 
-    p.
-      Imagine that there was a website that could help you take control of your work.
-      You'd get to school and quick check a page on your phone telling you that you
-      have a quiz that day, or maybe even a test. It reminds you that a big
-      English essay is coming up soon, and you're only halfway through it. During
-      the day in between classes you would whip out your phone again to check the
-      site. It tells you your next class is Math in room 511 and you have an
-      worksheet you haven't done yet! You quick scribble down random answers on it
-      and are able to hand it in on time. At the end of the day you fill in your
-      homework using the site once again and check it in the locker room to know
-      what books to bring home.
-    a.button.button-primary(href="#") Interested?
-    br
-    br
+      p.
+        Imagine that there was a website that could help you take control of your work.
+        You'd get to school and quick check a page on your phone telling you that you
+        have a quiz that day, or maybe even a test. It reminds you that a big
+        English essay is coming up soon, and you're only halfway through it. During
+        the day in between classes you would whip out your phone again to check the
+        site. It tells you your next class is Math in room 511 and you have an
+        worksheet you haven't done yet! You quick scribble down random answers on it
+        and are able to hand it in on time. At the end of the day you fill in your
+        homework using the site once again and check it in the locker room to know
+        what books to bring home.
+      a.btn.btn-primary(href="#") Interested?
   .row
-    h3 What is it?
+    .col-xs-12.col-md-6
+      h3 What is it?
+    .col-xs-12.col-md-6
+      h3 When is it?
+      p Soon.
