--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,17 +1,68 @@
 doctype html
 html
   head
-    meta(charset="utf-8")
-    title= title
-    meta(name="description", content="")
-    meta(name="author", content="")
+    meta(charset="UTF-8")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1")
+    meta(name="description", content="")
+    meta(name="author", content="Frank Matranga")
 
-    link(rel='stylesheet', href='/stylesheets/normalize.css')
-    link(rel='stylesheet', href='/stylesheets/skeleton.css')
-    link(rel="stylesheet/less", type="text/css", href="/stylesheets/all.less")
+    // Title is different for each page
+    title= title
+
+    // Bootstrap
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
+    link(rel='stylesheet', href='https://bootswatch.com/cosmo/bootstrap.min.css')
+
+    // JQuery
+    link(rel="stylesheet", href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/black-tie/jquery-ui.css")
+
+    // Font Awesome
+    link(rel="stylesheet", href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
+
+    // My own
+    link(rel="stylesheet", href="/stylesheets/all.css")
 
   body
+    // Top fixed navigation bar
+    nav.navbar.navbar-default.navbar-fixed-top
+      .container
+        .navbar-header
+          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href=(title=="Worker" ? "#": "/")) Worker
+        #navbar.navbar-collapse.collapse
+          ul.nav.navbar-nav
+            li(class=(title=="Worker" || title=="Your Home" ? "active" : ""))
+              a(href="/") Home
+            li(class=(title=="Users"? "active" : ""))
+              a(href="/users") Users
+            li
+              a(target="_blank", href="https://bitbucket.org/apexal/worker") Source
+          ul.nav.navbar-nav.navbar-right
+            li.dropdown
+                if loggedIn
+                    a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')= currentUser._json.name
+                        span.caret
+                else
+                    a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false') Not Logged In
+                        span.caret
+                ul.dropdown-menu(role='menu')
+                    if loggedIn
+                      li
+                          a(href='/logout') Logout
+                    else
+                      li
+                          a(href='#') Login
+                      li
+                          a(href='#') Register
     .container
+      .alert.alert-danger(role="alert") Warning! This is the development server, so I have no idea how you found your way here. Don't touch anything!
+
       block content
-    script(src="/javascripts/less.min.js")
+    script(src='http://code.jquery.com/jquery-2.1.4.min.js')
+    script(src='http://code.jquery.com/ui/1.11.4/jquery-ui.min.js')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
