--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -21,12 +21,15 @@ html {
 }
 
 body {
-  padding-top: 70px;
-  padding-bottom: 50px;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
 
-
+main {
+  flex: 1 0 auto;
+}
 
 
 
