--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,8 +11,11 @@ html
     title= title
 
     // Bootstrap
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
-    link(rel='stylesheet', href='https://bootswatch.com/cosmo/bootstrap.min.css')
+    //link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
+    //link(rel='stylesheet', href='https://bootswatch.com/paper/bootstrap.min.css')
+
+    // Material Design
+    link(rel='stylesheet', href='/stylesheets/materialize.min.css')
 
     // JQuery
     link(rel="stylesheet", href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/black-tie/jquery-ui.css")
@@ -24,45 +27,44 @@ html
     link(rel="stylesheet", href="/stylesheets/all.css")
 
   body
-    // Top fixed navigation bar
-    nav.navbar.navbar-default.navbar-fixed-top
-      .container
-        .navbar-header
-          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand(href=(title=="Worker" ? "#": "/")) Worker
-        #navbar.navbar-collapse.collapse
-          ul.nav.navbar-nav
-            li(class=(title=="Worker" || title=="Your Home" ? "active" : ""))
-              a(href="/") Home
-            li(class=(title=="Users"? "active" : ""))
-              a(href="/users") Users
-            li
-              a(target="_blank", href="https://bitbucket.org/apexal/worker") Source
-          ul.nav.navbar-nav.navbar-right
-            li.dropdown
-                if loggedIn
-                    a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')= currentUser._json.name
-                        span.caret
-                else
-                    a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false') Not Logged In
-                        span.caret
-                ul.dropdown-menu(role='menu')
-                    if loggedIn
-                      li
-                          a(href='/logout') Logout
-                    else
-                      li
-                          a(href='#') Login
-                      li
-                          a(href='#') Register
-    .container
-      .alert.alert-danger(role="alert") Warning! This is the development server, so I have no idea how you found your way here. Don't touch anything!
+    header
+      .navbar-fixed
+        nav
+          .nav-wrapper
+            a.brand-logo.center(href="#") Adiutor
+            a.button-collapse(href="#", data-activates="nav-mobile")
+              i.mdi-navigation-menu(style="margin-left: 20px;")
+            ul.side-nav#nav-mobile
+              li.active
+                a(href="/") Home
+              li
+                a(href="/users") Users
+              li
+                a(href="#") Test
+            ul.left.hide-on-med-and-down
+              li.active
+                a.mdi-action-home(href="/")
+              li
+                a(href="/users") Users
+              li
+                a(href="#") Test
 
-      block content
+            .valign-wrapper.right(style="width: 60px; height: 100%")
+              img.circle(style="width: 70%", src="http://www.clker.com/cliparts/5/7/4/8/13099629981030824019profile.svg.med.png")
+            ul.right.hide-on-small-only
+              if 4 == 4
+                li
+                li
+                  a(href="#") Not Logged In
+              else
+                li
+                  a(href="#") Logged In
+    main
+      .container
+        block content
+
     script(src='http://code.jquery.com/jquery-2.1.4.min.js')
     script(src='http://code.jquery.com/ui/1.11.4/jquery-ui.min.js')
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
+    script(src='/javascripts/materialize.min.js')
+    script(src='/javascripts/effects.js')
+    //script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
