Added Passport, Mongoose, and connected Mongodb

--- a/views/index.jade
+++ b/views/index.jade
@@ -37,7 +37,4 @@ block content
             that much more free time for anything?
 
 
-  h3 What is it?
-
-  h3 When is it?
-  p Soon.
+  h3 #{today.format("dddd, MMMM Do YYYY")}
