--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -52,3 +52,13 @@ main {
   margin-bottom: 0;
   margin-top: 0;
 }
+
+#navbar-photo {
+  background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: 100% 100%;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+
+}
