--- a/views/layout.jade
+++ b/views/layout.jade
@@ -53,7 +53,7 @@ html
               if loggedIn
                   #navbar-photo.right(style="background-image: url(https://webeim.regis.org/photos/regis/Student/"+currentUser.code+".jpg)")
               else
-                a(href="/login", style="height: 100%")
+                a(href="/login", style="height: 100%; padding-top: 7px")
                   #navbar-photo.right(style="background-image: url(http://www.clker.com/cliparts/5/7/4/8/13099629981030824019profile.svg.med.png)")
 
             ul.right.hide-on-small-only
