--- a/views/users/login.jade
+++ b/views/users/login.jade
@@ -12,5 +12,5 @@ block content
         .input-field.col.s12.m6
           input.validate#password(required=true, name="password", placeholder="Password", type="password")
           label(for="password") Password
-        a.left.btn(href="/register") Not Yet Registered?
+        a.left.btn.btn-large.red(href="/register") Not Yet Registered?
         button.btn.right.btn-large Login
