--- a/views/users/register.jade
+++ b/views/users/register.jade
@@ -25,5 +25,5 @@ block content
           input.validate#code(required=true, name="code", maxlength="25", placeholder="Code", type="text")
           label(for="code") Password
         .col.s12
-            a.left.btn(href="/login") Already Registered?
+            a.left.btn.btn-large.red(href="/login") Already Registered?
             button.btn.right.btn-large Register
