--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   h1= title
 
   include /info
-  
+
   p
     b adiutor, adiutoris
     |  (m) - helper, assistant; deputy
@@ -21,7 +21,7 @@ block content
     homework using the site once again and check it in the locker room to know
     what books to bring home.
 
-  a.btn.waves-effect.waves-light.tooltipped(data-position="bottom", data-delay="50", data-tooltip="I am tooltip") Hover me!
+  a.btn.waves-effect.waves-light.tooltipped(data-position="bottom", data-delay="50", data-tooltip="I am tooltip", onclick="Materialize.toast('I am a toast!', 4000)") Hover me!
 
   .row
     .col.s12.m6
