--- a/views/index.jade
+++ b/views/index.jade
@@ -43,8 +43,8 @@ block content
   h3 #{today.format("dddd, MMMM Do YYYY")}
 
   if loggedIn
-    .fixed-action-btn(style="bottom: 45px; right: 45px;")
-      a.btn-floating.btn-large.red(href="")
+    .fixed-action-btn
+      a.btn-floating.btn-large.red
         i.large.mdi-action-view-module
       ul
         li
