Verified user support

--- a/views/index.jade
+++ b/views/index.jade
@@ -48,11 +48,11 @@ block content
         i.large.mdi-action-view-module
       ul
         li
-          a.btn-floating.red(href="/grader")
+          a.btn-floating.red.tooltipped(data-position="left", data-delay="10", data-tooltip="Grader", href="/grader")
             i.mdi-editor-insert-chart
         li
-          a.btn.btn-floating.yellow(href="/noter")
+          a.btn.btn-floating.yellow.tooltipped(data-position="left", data-delay="10", data-tooltip="Noter", href="/noter")
             i.mdi-action-note-add
         li
-          a.btn.btn-floating.green(href="/scheduler")
+          a.btn.btn-floating.green.tooltipped(data-position="left", data-delay="10", data-tooltip="Scheduler", href="/scheduler")
             i.mdi-notification-event-note
