--- a/views/index.jade
+++ b/views/index.jade
@@ -1,58 +1,21 @@
 extends /layout
 
 block content
-  h1= title
-
   include /info
 
-  p
-    b adiutor, adiutoris
-    |  (m) - helper, assistant; deputy
-
-  p.
-    Imagine that there was a website that could help you take control of your work.
-    You'd get to school and quick check a page on your phone telling you that you
-    have a quiz that day, or maybe even a test. It reminds you that a big
-    English essay is coming up soon, and you're only halfway through it. During
-    the day in between classes you would whip out your phone again to check the
-    site. It tells you your next class is Math in room 511 and you have an
-    worksheet you haven't done yet! You quick scribble down random answers on it
-    and are able to hand it in on time. At the end of the day you fill in your
-    homework using the site once again and check it in the locker room to know
-    what books to bring home.
-
-  a.btn.waves-effect.waves-light.tooltipped(data-position="bottom", data-delay="50", data-tooltip="I am tooltip", onclick="Materialize.toast('I am a toast!', 4000)") Hover me!
-
-  .row
-    .col.s12.m6
-      .card
-        .card-image
-          img.activator(src="http://www.xavierhs.org/s/81/images/editor/tom/regis.jpg")
-        .card-content
-          span.card-title.activator.grey-text.text-darken-4 Regis High School
-            i.mdi-navigation-more-vert.right
-        .card-reveal
-          span.card-title.activator.grey-text.text-darken-4 I Get It
-            i.mdi-navigation-close.right
-          p.
-            Regis is hard. We get a lot of work and little time to do it all.
-            Wouldn't it be great if we could organize everything we get, giving us
-            that much more free time for anything?
+  .container
+    .jumbotron
+      h1 In Just #{moment("09-11-2015").fromNow(true)}
+      p.
+        It will begin again.
 
 
-  h3 #{today.format("dddd, MMMM Do YYYY")}
+    .row
+      .col-xs-12
 
-  if loggedIn
-    .fixed-action-btn
-      a.btn-floating.btn-large.red
-        i.large.mdi-action-view-module
-      ul
-        li
-          a.btn-floating.red.tooltipped(data-position="left", data-delay="10", data-tooltip="Grader", href="/grader")
-            i.mdi-editor-insert-chart
-        li
-          a.btn.btn-floating.yellow.tooltipped(data-position="left", data-delay="10", data-tooltip="Noter", href="/noter")
-            i.mdi-action-note-add
-        li
-          a.btn.btn-floating.green.tooltipped(data-position="left", data-delay="10", data-tooltip="Scheduler", href="/scheduler")
-            i.mdi-notification-event-note
+        img.panel.panel-default(style="width: 300px;", src="http://www.xavierhs.org/s/81/images/editor/tom/regis.jpg")
+
+    .row
+      .progress
+        .progress-bar.progress-bar-striped.active(role="progressbar", aria-valuenow="5", aria-valuemin="0", aria-valuemax="100", style="width: 5%")
+          span.sr-only 5% ready
