--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -21,10 +21,16 @@ html {
   width: 100%;
   height: 100%;
 }
+body { padding-bottom: 70px; }
 
 main {
   margin-top: 70px;
 }
+
+#bottom-bar {
+
+}
+
 
 /*** 02 - ***/
 
@@ -44,8 +50,10 @@ main {
 
 /* User List Page */
 
-@media (max-width: 790px) {
-
+@media (max-width: 768px) {
+  #bottom-bar {
+    max-height: none;
+  }
 }
 
 .user-box {
