--- a/views/users/login.jade
+++ b/views/users/login.jade
@@ -1,16 +1,18 @@
 extends /layout
 
 block content
-  h1 Login
+  .container
+    .page-header
+      h1 Login
 
-  .row
-    .col.s12
-      form(method="POST", action="/users/login")
-        .input-field.col.s12.m6
-          input.validate#username(required=true, name="username", placeholder="Username", type="text")
-          label(for="username") Username
-        .input-field.col.s12.m6
-          input.validate#password(required=true, name="password", placeholder="Password", type="password")
-          label(for="password") Password
-        a.left.btn.btn-large.red(href="/register") Not Yet Registered?
-        button.btn.right.btn-large Login
+    .row
+      .col-xs-12
+        form(method="POST", action="/users/login")
+          .form-group
+            label(for="username") Username
+            input.form-control#username(required=true, name="username", placeholder="Username", type="text")
+          .form-group
+            label(for="password") Password
+            input.form-control#password(required=true, name="password", placeholder="Password", type="password")
+          a.left.btn.btn-default(href="/register") Not Yet Registered?
+          button.btn.right.btn-primary Login
