--- a/views/index.jade
+++ b/views/index.jade
@@ -16,6 +16,7 @@ block content
         img.panel.panel-default(style="width: 300px;", src="http://www.xavierhs.org/s/81/images/editor/tom/regis.jpg")
 
     .row
-      .progress
-        .progress-bar.progress-bar-striped.active(role="progressbar", aria-valuenow="5", aria-valuemin="0", aria-valuemax="100", style="width: 5%")
-          span.sr-only 5% ready
+      .col-xs-12
+        .progress
+          .progress-bar.progress-bar-striped.active(role="progressbar", aria-valuenow="5", aria-valuemin="0", aria-valuemax="100", style="width: 5%")
+            span.sr-only 5% ready
