--- a/views/users/register.jade
+++ b/views/users/register.jade
@@ -1,30 +1,31 @@
 extends /layout
-
+            
 block content
   .container
-    h1 Register
-    .row
+    .page-header
+      h1 Register
+    .row    
       .col-xs-12
         include /info
         form(method="POST", action="/users/register")
-          .input-field.col.s12.m6
-            input.validate#name(required=true, name="name", maxlength="25", placeholder="Full Name", type="text")
+          .form-group
             label(for="name") Full Name
-
-          .input-field.col.s12.m6
-            input.validate#email(required=true, name="email", maxlength="25", placeholder="Email", type="text")
+            input.form-control#name(required=true, name="name", maxlength="25", placeholder="Full Name", type="text")
+          .form-group
             label(for="email") Email
-          .input-field.col.s12.m6
-            input.validate#password(required=true, name="password", pattern=".{5,}", maxlength="25", placeholder="Password", type="password")
+            input.form-control#email(required=true, name="email", maxlength="25", placeholder="Email", type="text")
+          .form-group
             label(for="password") Password
-          .input-field.col.s12.m6
-            select#advisement(name="advisement", required=true)
+            input.form-control#password(required=true, name="password", pattern=".{5,}", maxlength="25", placeholder="Password", type="password")
+          .form-group
+            label(for="advisement") Advisement
+            select.form-control#advisement(name="advisement", required=true)
               for a in adv
                 option= a
-            label(for="advisement") Advisement
-          .input-field.col.s12
-            input.validate#code(required=true, name="code", maxlength="25", placeholder="Code", type="text")
+          .form-group
             label(for="code") Password
-          .col.s12
-              a.left.btn.btn-large.red(href="/login") Already Registered?
-              button.btn.right.btn-large Register
+            input.form-control#code(required=true, name="code", maxlength="25", placeholder="Code", type="text")
+
+          .row
+            a.left.btn.btn-default(href="/login") Already Registered?
+            button.btn.right.btn-primary Register
