Created mobile only bottom navbar

--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -27,11 +27,32 @@ main {
   margin-top: 70px;
 }
 
-#bottom-bar {
-
+@media (max-width: 768px) {
+  navbar.navbar-fixed-bottom > container{
+    height: 50px;
+  }
 }
 
+#mobile-bottom-bar {
+  height: 50px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
 
+.navbar-pic {height: 50px;}
+
+#mobile-bottom-bar a{
+  flex: 1;
+  padding: 10px 10px 10px 20px;
+  font-size: 1.5em;
+  color: white;
+  text-decoration: none;
+}
+
+#mobile-bottom-bar a:hover {
+  background-color: #090909;
+}
 /*** 02 - ***/
 
 
@@ -79,4 +100,10 @@ main {
 
 .full-width {
   width: 100%;
+}
+
+/* User Profile Page */
+
+#profile-pic, .user-profile blockquote {
+  max-width: 200px;
 }
