--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ block content
 
   .container
     .jumbotron
-      h1 In Just #{moment("09-11-2015").fromNow(true)}
+      h1(style="text-transform: capitalize") In Just #{moment("2015-09-11").fromNow(true)}
       p.
         It will begin again.
 
