--- a/views/layout.jade
+++ b/views/layout.jade
@@ -56,6 +56,10 @@ html
                   ul.dropdown-menu(role='menu')
                       if loggedIn
                         li
+                          a(href="/users/"+currentUser.username) View Profile
+                        li
+                          a(href="/users/profile") Edit Profile
+                        li
                             a(href='/logout') Logout
                       else
                         li
@@ -88,6 +92,20 @@ html
               else
                 li
                   a(href="/login") Login to access the services.
+            if loggedIn
+              img.right.navbar-pic(src="https://webeim.regis.org/photos/regis/Student/"+currentUser.code+".jpg")
+        if loggedIn
+          #mobile-bottom-bar.visible-xs
+            span
+              a.fa.fa-th-list
+            span
+              a.fa.fa-line-chart(href="/grader")
+            span
+              a.fa.fa-pencil-square-o(href="/noter")
+            span
+              a.fa.fa-calendar(href="/scheduler")
+            img.right.navbar-pic(src="https://webeim.regis.org/photos/regis/Student/"+currentUser.code+".jpg")
+
 
     script(src='http://code.jquery.com/jquery-2.1.4.min.js')
     script(src='http://code.jquery.com/ui/1.11.4/jquery-ui.min.js')
