--- a/views/users/list.jade
+++ b/views/users/list.jade
@@ -24,7 +24,8 @@ block content
                 span.caret
               ul.dropdown-menu(role="menu")
                 li
-                  a(href="/users/"+user.username) View Profile
-                  a(href="/users/"+user.username+"/schedule") View Schedule
+                  if loggedIn
+                    a(href="/users/"+user.username) View Profile
+                    a(href="/users/"+user.username+"/schedule") View Schedule
                   a(href="#") View Advisement
                   a(href="mailto:"+user.email) Email
