--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -3,15 +3,18 @@ extends /layout
 block content
   .container
     .page-header
-      h1 #{user.fullName}'s Profile
+      h1.center-xs #{user.fullName}'s Profile
 
     .user-profile
       .row
-        .col-xs-12.col-sm-6.col-md-4
+        .col-xs-12.col-sm-6.col-md-4.center-xs
           img#profile-pic(src="https://webeim.regis.org/photos/regis/Student/"+user.code+".jpg")
           br
           blockquote
-            p= user.bio
+            if user.bio
+              p= user.bio
+            else
+              p I haven't set my bio yet!
         .col-xs-12.col-sm-6.col-md-4
           .panel.panel-default
             .panel-heading
@@ -42,7 +45,7 @@ block content
             .panel-body
               .user-info
                 b Advisement:
-                |  #{user.advisement}
+                a(href="/advisements/"+user.advisement)  #{user.advisement}
         .col-xs-12.col-sm-6.col-md-4
           .panel.panel-warning
             .panel-heading
