--- a/views/users/register.jade
+++ b/views/users/register.jade
@@ -23,7 +23,7 @@ block content
               for a in adv
                 option= a
           .form-group
-            label(for="code") Password
+            label(for="code") Student ID#
             input.form-control#code(required=true, name="code", maxlength="25", placeholder="Code", type="text")
 
           .row
