--- a/views/users/list.jade
+++ b/views/users/list.jade
@@ -4,6 +4,10 @@ block content
   .container
     .page-header
       h1 Users
+        if tableForm == false
+          a.btn.btn-default.right(href="/users?table=1") Table Form
+        else
+          a.btn.btn-default.right(href="/users") Regular Form
 
     .row
       .col-xs-12
@@ -12,20 +16,46 @@ block content
             label(for="name") Name
             input.form-control(type="text", name="name")
           button.btn.btn-primary Search
-
-    .row
-      for user in users
-        .col-xs-12.col-sm-6.col-md-4.col-lg-3.text-center
-          .user-box
-            img(alt=user.bio, src="https://webeim.regis.org/photos/regis/Student/"+user.code+".jpg")
-            .btn-group.full-width
-              b.user-adv(href="/users/"+user.username)= user.advisement
-              button.full-width.btn.btn-default.dropdown-toggle(data-toggle="dropdown", ara-expanded="false", type="button")= user.fullName+" "
-                span.caret
-              ul.dropdown-menu(role="menu")
-                li
+    
+    if tableForm
+      .row
+        table.table.table-hover.table-striped.user-table
+          tr
+            th Picture
+            th Advisement
+            th Name
+            th Rank
+          for user in users
+            tr
+              td(style="vertical-align: middle;")
+                img.table-pic(src="https://webeim.regis.org/photos/regis/Student/"+user.code+".jpg")
+              td.larger(style="vertical-align: middle;")
+                a(href="/advisements/"+user.advisement)= user.advisement
+              td.larger(style="vertical-align: middle;")
+                a(href="/users/"+user.username)= user.fullName
+              td.larger(style="vertical-align: middle;")= user.rankName
+    else
+      .row
+        for user in users
+          .col-xs-12.col-sm-6.col-md-4.col-lg-3.text-center
+            .user-box
+              img(alt=user.bio, src="https://webeim.regis.org/photos/regis/Student/"+user.code+".jpg")
+              .btn-group.full-width
+                a.user-adv(href=(loggedIn ? "/advisements/"+user.advisement : "#"))= user.advisement
+                button.full-width.btn.btn-default.dropdown-toggle(data-toggle="dropdown", ara-expanded="false", type="button")
+                  if user.verified
+                    img(src="/images/verified.png", style="width: 15px")
+                    |  
+                  | #{user.fullName+" "}
                   if loggedIn
-                    a(href="/users/"+user.username) View Profile
-                    a(href="/users/"+user.username+"/schedule") View Schedule
-                  a(href="/advisements/"+user.advisement) View Advisement
-                  a(href="mailto:"+user.email) Email
+                    span.caret
+                if loggedIn
+                  ul.dropdown-menu(role="menu")
+                    li
+                      a(href="/users/"+user.username) View Profile
+                    li
+                      a(href="/users/"+user.username+"/schedule") View Schedule
+                    li
+                      a(href="/advisements/"+user.advisement) View Advisement
+                    li
+                      a(href="mailto:"+user.email) Email
