--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -3,8 +3,9 @@ extends /layout
 block content
   .container
     .page-header
-      h1.center-xs #{user.fullName} of #{user.advisement}
-
+      h1.center-xs #[b= user.gradeName+" "+user.rankName] #[br.visible-xs] #{user.fullName} of #{user.advisement}
+    if user.verified == false
+      .alert.alert-danger(role="alert") This user is not verified to truly be #{user.firstName}! Therefore this account is restricted in what services it can use.
     .user-profile
       .row
         .col-xs-12.col-sm-6.col-md-4.center-xs
