--- a/views/info.jade
+++ b/views/info.jade
@@ -1,11 +1,11 @@
-if info != null
+if info.length > 0
   .alert.alert-info.alert-dismissible(data-dismiss="alert", aria-label="Close", role="alert")= i
     for i in info
       | #{i}
       br
     button.close(data-dismiss="alert")
 
-if errs != null
+if errs.length > 0
   .alert.alert-danger.alert-dismissible(data-dismiss="alert", role="alert")= err
     for err in errs
       | #{err}
